# internal/handlers/userHandlers.go
@@ -1,0 +1,86 @@
+package handlers
+
+import (
+	"TestProjecct/internal/userService"
+	"TestProjecct/internal/web/users"
+	"context"
+)
+
+type UserHandler struct {
+	service userService.UserService
+}
+
+func NewUserHandler(s userService.UserService) *UserHandler {
+	return &UserHandler{service: s}
+}
+
+func (h *UserHandler) GetUsers(ctx context.Context, request users.GetUsersRequestObject) (users.GetUsersResponseObject, error) {
+	allUsers, err := h.service.GetAllUsers()
+	if err != nil {
+		return nil, err
+	}
+	response := users.GetUsers200JSONResponse{}
+
+	for _, usr := range allUsers {
+		user := users.User{
+			Id:       &usr.ID,
+			Email:    &usr.Email,
+			Password: &usr.Password,
+		}
+		response = append(response, user)
+	}
+
+	return response, nil
+}
+
+// Postuser implements user.StrictServerInterface.
+func (h *UserHandler) PostUsers(ctx context.Context, request users.PostUsersRequestObject) (users.PostUsersResponseObject, error) {
+	userRequest := request.Body
+	userToCreate := userService.UserRequest{
+		Email:    *userRequest.Email,
+		Password: *userRequest.Password,
+	}
+	createdUser, err := h.service.CreateUser(userToCreate)
+
+	if err != nil {
+		return nil, err
+	}
+	// создаем структуру респонс
+	response := users.PostUsers201JSONResponse{
+		Id:       &createdUser.ID,
+		Email:    &createdUser.Email,
+		Password: &createdUser.Password,
+	}
+	// Просто возвращаем респонс!
+	return response, nil
+}
+
+func (h *UserHandler) PatchUsersId(ctx context.Context, request users.PatchUsersIdRequestObject) (users.PatchUsersIdResponseObject, error) {
+	userID := request.Id
+	userRequest := request.Body
+
+	userToUpdate := userService.UserRequest{
+		Email:    *userRequest.Email,
+		Password: *userRequest.Password,
+	}
+	updatedUser, err := h.service.UpdateUser(userID, userToUpdate)
+	if err != nil {
+		return nil, err
+	}
+
+	response := users.PatchUsersId200JSONResponse{
+		Id:       &updatedUser.ID,
+		Email:    &updatedUser.Email,
+		Password: &updatedUser.Password,
+	}
+	return response, nil
+}
+
+func (h *UserHandler) DeleteUsersId(ctx context.Context, request users.DeleteUsersIdRequestObject) (users.DeleteUsersIdResponseObject, error) {
+	userId := request.Id
+
+	if err := h.service.DeleteUser(userId); err != nil {
+		return nil, err
+	}
+	return users.DeleteUsersId204JSONResponse{}, nil
+}
